--- a/2016.md
+++ b/2016.md
@@ -1,23 +1,43 @@
-# portfolio 2016
+# [publisher] portfolio 2016
 
+2016
+------
 2016.08
-- 방사선 관제용 서버프로그램(PC)
-
-2016.09
-- PRD KOREA
-http://www.prdkorea.com
-- ROBOMAX
-http://www.robomax.co.kr/
-
+#### - 방사선 관제용 서버프로그램(PC)      
+![image1](./img/pf_201608_01_01.png)
+![image2](./img/pf_201608_01_02.png)     
+　      
+2016.09    
+#### - PRD KOREA http://www.prdkorea.com
+#### - ROBOMAX http://www.robomax.co.kr
+　      
 2016.10
-- SK - MES SYSTEM(PC) / 40%
-
+#### - SK - MES SYSTEM(PC) / 40%   
+![image1](./img/pf_201610_01_01.png)
+![image2](./img/pf_201610_01_02.png)
+　      
 2016.11
-- 금연친구(PC)
-- 텍스트플래닛
-- 서울대학교 체육부
-
+#### - 금연친구(PC)   
+![image1](./img/pf_201611_01_01.png)
+![image2](./img/pf_201611_01_02.png)
+#### - 텍스트플래닛   
+![image1](./img/pf_201611_02_01.png)
+![image2](./img/pf_201611_02_02.png)
+#### - 서울대학교 체육부   
+![image1](./img/pf_201611_03_01.png)
+![image2](./img/pf_201611_03_02.png)   
+　      
 2016.12
-- 무안군방사선(PC)
-- 팩토브릿지
-- FromGolf
+#### - 무안군방사선(PC)   
+![image1](./img/pf_201612_01_01.png)
+![image2](./img/pf_201612_01_02.png)
+#### - 팩토브릿지   
+![image1](./img/pf_201612_02_01.png)
+![image2](./img/pf_201612_02_02.png)
+![image3](./img/pf_201612_02_03.png)
+![image4](./img/pf_201612_02_04.png)
+#### - FromGolf   
+![image1](./img/pf_201612_03_01.png)
+![image2](./img/pf_201612_03_02.png)   
+　      
+　      
