--- a/2019.md
+++ b/2019.md
@@ -57,7 +57,7 @@
 #### - NICKS 하남테크노밸리U1센터 http://www.nicksgo.com/jisancenter
 　      
 2019.09
-#### - 조인클릭 http://joinbiz.co.kr/html/main.jsp
+#### - 조인비즈 http://joinbiz.co.kr/html/main.jsp
 #### - 진격의부동산 http://jingyeok.com
 　      
 2019.10
