--- a/2019.md
+++ b/2019.md
@@ -45,7 +45,7 @@
 #### - eduTV http://www.edutv21.com
 
 2019.07
-#### - 포춘에이드/ (~ 19.11) https://www.fortunade.com
+#### - 포춘에이드/ (~ 19.11) https://www.fortunade.com / https://m.fortunade.com/unse (MOB)
 #### - 두란노   
 ![image1](./img/pf_201907_01_01.png)
 ![image2](./img/pf_201907_01_02.png)
